libwinegame (0.0.1-rc2-pashazz1~ppa3)  lucid; urgency=low

  * Fixed installation in rules file

 -- Pavel Zinin (Pashazz`s GnuPG key) <PZinin@gmail.com>  Sun, 02 May 2010 18:52:06 +0400

libwinegame (0.0.1-rc2-pashazz1~ppa2)  lucid; urgency=low

  * Naming fixes now

 -- Pavel Zinin (Pashazz`s GnuPG key) <PZinin@gmail.com>  Sun, 02 May 2010 17:12:24 +0400


libwinegame (0.0.1-rc2-1~ppa1) lucid; urgency=low

  * Fixes for Debian Policy

 -- Pavel Zinin (Pashazz`s GnuPG key) <PZinin@gmail.com>  Sat, 01 May 2010 17:08:33 +0400


libwinegame (0.0.1-rc2-1) lucid; urgency=low

  * Imported UpStream GIT

 -- Pavel Zinin (Pashazz`s GnuPG key) <PZinin@gmail.com>  Sat, 01 May 2010 13:08:00 +0400