@@ -25,7 +25,6 @@ build: build-stamp
 
 build-stamp: configure-stamp
 	dh_testdir
-    
 	# Add here commands to compile the package.
 	$(MAKE)
 
