@@ -1,3 +1,10 @@
+libwinegame (0.0.1-rc2-pashazz1~ppa4)  lucid; urgency=low
+
+  * Includes now in /usr/include/libwinegame
+
+ -- Pavel Zinin (Pashazz`s GnuPG key) <PZinin@gmail.com>  Mon, 03 May 2010 22:53:55 +0400
+
+
 libwinegame (0.0.1-rc2-pashazz1~ppa3)  lucid; urgency=low
 
   * Fixed installation in rules file
